[package]
name = "gtin"
version = "0.3.0"
edition = "2024"

[features]
default = []
random = ["dep:rand"]
serde = ["dep:serde"]

[dependencies]
rand = { version = "0.8", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
